# sample_rust_gcp

./: .gitignore  README.md
rust/: Cargo.toml  fake_makefile  index.html  mock_config.json
rust/docker/: Dockerfile
rust/src/: handler.rs  lib.rs  main.rs
rust/src/config/: mod.rs
rust/src/db/: connect.rs  mod.rs
rust/src/handler/: mod.rs  route.rs  route_not_found.rs  run.rs
terraform/gcp/mock/: main.tf  provider.tf  variables.tf
terraform/gcp/modules/artifact_registry/: main.tf  variable.tf
terraform/gcp/modules/cloud_run/: main.tf  variable.tf
