[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
postgres = "0.19.7"
postgres-openssl = "0.5.0"
sqlx = "0.7.4"
tokio-postgres = "0.7.10"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[bin]]
name = "http_server"
path = "src/bin/http_server.rs"
